@@ -1,0 +1,5 @@
+def do_asserts_work():
+    """
+    >>> assert False, 'this test should fail'
+    """
+    pass
