@@ -2,7 +2,7 @@
 # ON COVERAGE OF PYTEST PLUGINS:
 # http://pytest-cov.readthedocs.io/en/latest/plugins.html
 addopts = -p pytester -p no:doctest --xdoctest 
-norecursedirs = .git ignore build __pycache__ docs *.egg-info
+norecursedirs = .git ignore build __pycache__ docs *.egg-info _*
 ;--pyargs --doctest-modules --ignore=.tox
 ;rsyncdirs = tox.ini pytest.py _pytest testing
 ;python_files = test_*.py *_test.py testing/*/*.py
