@@ -1,0 +1,2 @@
+#!/bin/bash
+xdoctest xdoctest --style=google all
